# multi-thread-engine

./: pyproject.toml  test.py
src/multi_thread_engine/: config.py  interface.py  utils.py
