[project]
name = "multi-thread-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Pere Sole", email = "pscamprecios1@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
multi-thread-engine = "multi_thread_engine:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
